# sifft

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: build.yml  publish.yml
dataframe_validation/: __init__.py  compat.py  constraint_registry.py  dataframe_validation.py  exceptions.py  helpers.py  models.py
dataframe_validation/csvw/: __init__.py  column.py  datatype.py  models.py  validator.py
design_decisions/: README.md  architecture-overview.md  dataframe-validation-api.md  deferred-tracking.md  file-management-api.md  file-processing-api.md  file-tracking-and-deduplication.md  header-detection.md  table-writing-api.md
docs/: autoloader-integration.md  csvw-metadata.md  data-validation.md  extensibility.md  file-management.md  file-processing.md  getting-started.md  table-writing.md
file_management/: __init__.py  exceptions.py  file_operations.py  models.py
file_processing/: __init__.py  checksum.py  config.py  csvw_dialect.py  csvw_metadata.py  csvw_schema.py  delimited_files.py  delta_tracking.py  excel_file.py  exceptions.py  file_processor.py  helpers.py  models.py  registry.py  storage.py  tracking.py
samples/: README.md  csvw_advanced.csv  csvw_advanced.csv-metadata.json  csvw_simple.csv  csvw_simple.csv-metadata.json  csvw_validation_fail.csv  csvw_validation_fail.csv-metadata.json  csvw_validation_pass.csv  csvw_validation_pass.csv-metadata.json  data_comma.out  data_no_header.csv  data_pipe.out  data_tab.txt  excel_sample.xls  excel_sample.xlsx
table_writing/: __init__.py  config.py  exceptions.py  format_handlers.py  helpers.py  mode_handlers.py  models.py  validation.py  writer.py
tests/: test_exceptions.py  test_utils.py
tests/dataframe_validation/: test_constraint_registry.py  test_csvw_constraints.py  test_validation.py
tests/demo/: test_individual_demo.py  test_pipeline_demo.py
tests/features/: dataframe_validation.feature  extended_file_types.feature  file_processing.feature  strategy_pattern.feature
tests/file_management/: test_file_operations.py
tests/file_processing/: __init__.py  test_checksum.py  test_csvw_metadata.py  test_extended_file_types_bdd.py  test_file_processing_bdd.py  test_file_processor.py  test_helpers.py  test_registry.py  test_unit.py
tests/table_writing/: test_handlers.py  (+2 more)
(+1 files in other folders)
