[project]
name = "sifft"
version = "0.8.2"
description = "Spark Ingestion Framework for Tables (SIFFT) - a Python library providing a consistent interface for ingesting files into Apache Spark environments."
authors = [
    {name = "Iwan Dyke"},
    {name = "Fahad Khan"},
    {name = "Michał Poręba"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Developers"
]
dependencies = [
    "pyld>=2.0.4",
    "xlrd>=2.0.2",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "fsspec>=2023.1.0",
    "s3fs>=2023.1.0",
    "setuptools>=58.0",
]

[project.optional-dependencies]
pyspark3 = [
    "pyspark>=3.5,<4",
    "delta-spark>=3.2,<4",
]
pyspark4 = [
    "pyspark>=4,<5",
    "delta-spark>=4,<5",
]
dev = [
    "pytest>=9.0.2",
    "pytest-bdd>=8.1.0",
    "pytest-html>=4.1.1",
    "pytest-cov>=6.3.0",
    "ruff>=0.15.1",
    "pre-commit>=4.0.0",
    "mypy>=1.0.0",
]
dev-spark3 = [
    "sifft[dev,pyspark3]",
]
dev-spark4 = [
    "sifft[dev,pyspark4]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["file_processing", "dataframe_validation", "table_writing", "file_management"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["file_processing", "dataframe_validation", "table_writing", "file_management"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (let formatter handle it)
    "UP017",  # datetime.UTC requires Python 3.11+, Docker uses 3.10
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E721", "E402"]  # Allow long lines, type comparisons, and import placement in tests
"dataframe_validation/dataframe_validation.py" = ["E721"]  # Type comparison needed for exact type matching

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
ignore_missing_imports = true  # Ignore missing stubs for third-party libraries
exclude = ["tests/", "samples/"]
